--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
           <h1 id="project_title">Mc-utils</h1>
           <h2 id="project_tagline">Utilities to copy, back-up and update zip files.</h2>
-          <h3>Demo:</h3>
+          <h3 id="project_tagline">Demo:</h3>
             <img src="http://crisstanza.github.io/mc-utils/demo/mc-utils-screenshot.png" />
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/crisstanza/mc-utils/zipball/master">Download this project as a .zip file</a>
@@ -30,6 +30,7 @@
     </div>
 
     <!-- MAIN CONTENT -->
+    <!--
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h1>
@@ -38,6 +39,7 @@
 <p>Utilities to copy, back-up and update zip files.</p>
       </section>
     </div>
+-->
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
