--- a/index.html
+++ b/index.html
@@ -31,14 +31,12 @@
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
-    <!--
       <section id="main_content" class="inner">
-        <h1>
-<a name="mc-utils" class="anchor" href="#mc-utils"><span class="octicon octicon-link"></span></a>mc-utils</h1>
-
-<p>Utilities to copy, back-up and update zip files.</p>
-      </section>
+    <!--
+        <h1><a name="mc-utils" class="anchor" href="#mc-utils"><span class="octicon octicon-link"></span></a>mc-utils</h1>
+		<p>Utilities to copy, back-up and update zip files.</p>
 -->
+      </section>
     </div>
 
     <!-- FOOTER  -->
@@ -48,8 +46,6 @@
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-
-    
 
   </body>
 </html>
