--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <h1 id="project_title">Mc-utils</h1>
           <h2 id="project_tagline">Utilities to copy, back-up and update zip files.</h2>
           <h3 id="project_tagline">Demo:</h3>
-            <img src="http://crisstanza.github.io/mc-utils/demo/mc-utils-screenshot.png" />
+            <img src="demo/mc-utils-screenshot.png" />
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/crisstanza/mc-utils/zipball/master">Download this project as a .zip file</a>
               <a class="tar_download_link" href="https://github.com/crisstanza/mc-utils/tarball/master">Download this project as a tar.gz file</a>
